--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -3,9 +3,10 @@ line_length = 99
 target_version = ["py37"]
 
 [tool.isort]
-multi_line_output=3
-include_trailing_comma=true
-force_grid_wrap=0
-use_parentheses=true
-line_length=99
-lines_between_types=1
+force_grid_wrap = 0
+include_trailing_comma = true
+known_third_party = "cv2,docopt,numpy,tensorflow"
+line_length = 99
+lines_between_types = 1
+multi_line_output = 3
+use_parentheses = true
