--- a/Pipfile
+++ b/Pipfile
@@ -6,15 +6,17 @@ verify_ssl = true
 [dev-packages]
 black = "*"
 flake8 = "*"
-isort = "*"
+isort = { extras = ["pipfile"], version = "*" }
 jedi = "*"
 
 [packages]
 docopt = "*"
 h5py = "*"
 imageio = "*"
+innvestigate = "*"
 matplotlib = "*"
 numpy = "*"
+opencv-python = "*"
 pandas = "*"
 pyyaml = "*"
 scikit-image = "*"
