Add basic model analysis based on "innvestigate"
NOTE: The innvestigate package requires TensorFlow 1.3, so the current
implementation needs to live as a separate feature branch for the
foreseeable future.

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ jedi = "*"
 docopt = "*"
 h5py = "*"
 imageio = "*"
+innvestigate = "*"
 matplotlib = "*"
 numpy = "*"
 opencv-python = "*"
@@ -21,7 +22,7 @@ pyyaml = "*"
 scikit-image = "*"
 scikit-learn = "*"
 scipy = "*"
-tensorflow-gpu = "==2.0.0a0"
+tensorflow-gpu = "==1.13.1"
 tensorflow-hub = "*"
 
 [requires]
