--- a/bin/build
+++ b/bin/build
@@ -1,8 +1,12 @@
-#!/bin/sh
+#!/usr/bin/env bash
 
 set -eu
+
+args="$@"
 
 parent_dir=$(dirname $(readlink -f "$0"))
 root_dir=$(dirname $parent_dir)
 
-docker build -t thomasjo/nemo $@ $root_dir
+image_tag="thomasjo/nemo:latest"
+
+docker build --tag $image_tag $args "${root_dir}"
