--- a/Pipfile
+++ b/Pipfile
@@ -21,7 +21,7 @@ pyyaml = "*"
 scikit-image = "*"
 scikit-learn = "*"
 scipy = "*"
-tensorflow-gpu = "==2.0.0a0"
+tensorflow-gpu = "==2.0.0-beta1"
 tensorflow-hub = "*"
 
 [requires]
