--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ jedi = "*"
 
 [packages]
 docopt = "*"
+gast = "==0.2.2"  # Lock version due to breaking changes
 h5py = "*"
 imageio = "*"
 matplotlib = "*"
@@ -23,6 +24,7 @@ scikit-learn = "*"
 scipy = "*"
 tensorflow-gpu = "==2.0.0-beta1"
 tensorflow-hub = "*"
+tqdm = "*"
 
 [requires]
 python_version = "3.6"
