--- a/Pipfile
+++ b/Pipfile
@@ -23,7 +23,7 @@ pyyaml = "*"
 scikit-image = "*"
 scikit-learn = "*"
 scipy = "*"
-# tensorflow-gpu = "==2.0.0"  # HACK: Disable due to incompatibility with Pipenv
+tensorflow = "==2.1.0"
 tensorflow-hub = "*"
 tqdm = "*"
 
