--- a/springfield/128x128/evaluate.yaml
+++ b/springfield/128x128/evaluate.yaml
@@ -1,19 +1,22 @@
 kind: Job
 apiVersion: batch/v1
 metadata:
-  name: nemo-train
+  name: nemo-evaluate
 spec:
   template:
     spec:
       containers:
-      - name: nemo-train
+      - name: nemo-evaluate
         image: thomasjo/nemo:tensorflow-2.2.0
         workingDir: /storage/nemo
         command:
         - bin/pyrun
-        - python/train_model.py
-        - /data/partitions/2019-06
-        - output
+        - python/evaluate_model.py
+        # - /data/partitions/2019-06/test
+        - /data/generated
+        - output/128x128
+        - output/nemo--128x128--best.h5
+        - --image-size=128
         resources:
           limits:
             memory: "16Gi"
