--- a/springfield/128x128/suite.yaml
+++ b/springfield/128x128/suite.yaml
@@ -1,19 +1,20 @@
 kind: Job
 apiVersion: batch/v1
 metadata:
-  name: nemo-train
+  name: nemo-suite-128x128
 spec:
   template:
     spec:
       containers:
-      - name: nemo-train
+      - name: nemo-suite
         image: thomasjo/nemo:tensorflow-2.2.0
         workingDir: /storage/nemo
         command:
         - bin/pyrun
-        - python/train_model.py
+        - python/training_suite.py
         - /data/partitions/2019-06
-        - output
+        - output/suite-128x128
+        - --image-size=128
         resources:
           limits:
             memory: "16Gi"
