--- a/springfield/evaluate.yaml
+++ b/springfield/evaluate.yaml
@@ -1,19 +1,20 @@
 kind: Job
 apiVersion: batch/v1
 metadata:
-  name: nemo-train
+  name: nemo-evaluate
 spec:
   template:
     spec:
       containers:
-      - name: nemo-train
+      - name: nemo-evaluate
         image: thomasjo/nemo:tensorflow-2.2.0
         workingDir: /storage/nemo
         command:
         - bin/pyrun
-        - python/train_model.py
-        - /data/partitions/2019-06
+        - python/evaluate_model.py
+        - /data/partitions/2019-06/test
         - output
+        - output/nemo--best-backup.h5
         resources:
           limits:
             memory: "16Gi"
