--- a/springfield/suite.yaml
+++ b/springfield/suite.yaml
@@ -1,5 +1,5 @@
 name: nemo-suite
-image: thomasjo/nemo:latest
+image: thomasjo/nemo:tensorflow-2.2.0
 workingDir: /storage/nemo
 command: ["bin/pyrun", "python/training_suite.py", "/data", "output/suite"]
 # command: ["python3", "python/training_suite.py", "data", "output"]
