Upgrade to TensorFlow v2.3.0

--- a/Pipfile
+++ b/Pipfile
@@ -17,13 +17,13 @@ h5py = "*"
 imageio = "*"
 matplotlib = "*"
 numpy = "*"
-opencv-python = "*"
+opencv-python-headless = "*"
 pandas = "*"
 pyyaml = "*"
 scikit-image = "*"
 scikit-learn = "*"
 scipy = "*"
-tensorflow = "==2.2.0"
+tensorflow = "==2.3.0"
 tensorflow-hub = "*"
 tqdm = "*"
 
